Add event resource to API
